--- a/tasks/html/hard/index.html
+++ b/tasks/html/hard/index.html
@@ -9,6 +9,7 @@
         <title>Fork, Commit, Merge - Hard Issue</title>
     </head>
     <body>
+        <h1>Hello B2014971</h1>
         <nav id="navbar">
             <!-- TODO: Add navbar -->
         </nav>
